  off.
  (Jacques Garrigue, report by Francois Pottier, review by Leo White)

- #8747, #9709: incorrect principality warning on functional updates of records
  (Jacques Garrigue, report and review by Thomas Refis)

- #9421, #9427: fix printing of (::) in ocamldoc
  (Florian Angeletti, report by Yawar Amin, review by Damien Doligez)

- #9469: Better backtraces for lazy values
  (Leo White, review by Nicolás Ojeda Bär)

- #9521, #9522: correctly fail when comparing functions
  with Closure and Infix tags.
  (Gabriel Scherer and Jeremy Yallop and Xavier Leroy,
   report by Twitter user @st_toHKR through Jun Furuse)

- #9611: maintain order of load path entries in various situations: when passing
  them to system linker, ppx contexts, etc.
  (Nicolás Ojeda Bär, review by Jérémie Dimino and Gabriel Scherer)

- #9633: ocamltest: fix a bug when certain variables set in test scripts would
  be ignored (eg `ocamlrunparam`).
  (Nicolás Ojeda Bär, review by Sébastien Hinderer)

- #9681, #9690, #9693: small runtime changes
  for the new closure representation (#9619)
  (Xavier Leroy, Sadiq Jaffer, Gabriel Scherer,
   review by Xavier Leroy and Jacques-Henri Jourdan)

- #9759, #9767: Spurious GADT ambiguity without -principal
  (Jacques Garrigue, report by Thomas Refis,
   review by Thomas Refis and Gabriel Scherer)

- #9825, #9830: the C global variable caml_fl_merge and the C function
  caml_spacetime_my_profinfo (bytecode version) were declared and
  defined with different types.  This is undefined behavior and
  cancause link-time errors with link-time optimization (LTO).
  (Xavier Leroy, report by Richard Jones, review by Nicolás Ojeda Bär)

- #9753: fix build for Android
  (Github user @EduardoRFS, review by Xavier Leroy)

- #9848, #9855: Fix double free of bytecode in toplevel
  (Stephen Dolan, report by Sampsa Kiiskinen, review by Gabriel Scherer)

- #9860: wrong range constraint for subtract immediate on zSystems / s390x
  (Xavier Leroy, review by Stephen Dolan)
